--- a/roles/containers/files/docker-compose.yml
+++ b/roles/containers/files/docker-compose.yml
@@ -23,8 +23,8 @@ services:
 
 volumes:
   mariadb_data:
-    name: 'mariadb-data'
+    name: mariadb-data
   nginx_conf:
-    name: 'nginx-config'
+    name: nginx-config
   nginx_data:
-    name: 'nginx-data'
+    name: nginx-data
